upload files to file system

--- a/src/main/resources/views.properties
+++ b/src/main/resources/views.properties
@@ -1,2 +1,3 @@
 orderPdfView.(class)   =com.sivitsky.ddr.service.PDFBuilder
 allOrderPdfView.(class)=com.sivitsky.ddr.service.AllOrderPDFBuilder
+pathForGoodsImg=D://ddr/src/main/webapp/resources/imggoods
